@@ -1,4 +1,6 @@
-﻿- Add additional public method calls for interfacing with other mods
+﻿
+- Memory management: overwrite original thumbnail atlas when generating new thumbnails
+- Add additional public method calls for interfacing with other mods
 - Update translation framework
 
 
